--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="main-logo">
-            <h2>Logo</h2>
-        </div>
+        <div class="main-logo"></div>
 
         <nav>
-            <ul>
-                <li><a href="" class="navbar">Home</a></li>
-                <li><a href="" class="navbar">Our Package</a></li>
-                <li><a href="" class="navbar">Call Us</a></li>
-            </ul>
+            <a href="" class="navbar">Home</a>
+            <a href="" class="navbar">Our Package</a>
+            <a href="" class="navbar">Call Us</a>
         </nav>
-
     </header>
 
     <hr/>
@@ -32,16 +27,15 @@
 
        <!-- konten utama -->
        <article class="main-article">
+        <!-- konten banner autoslide -->
         <section class="container-banner">
-            <div class="banner-autoslide">
-
-            </div>
+            <div class="banner-autoslide"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, eum?</p>
-           </section>
+        </section>
    
-           <section>
-               <h2>Form Contact Us</h2>
-           </section>
+        <section>
+            <h2>Form Contact Us</h2>
+        </section>
        </article>
 
        <!-- Konten Our Package -->
