--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="js/script.js" defer></script>
 </head>
@@ -24,7 +24,7 @@
     <main>
        <header class="main-article-header">
             <h1>Your Trusted Travel Agent's</h1>
-            <h3>Your happiness is our hapiness</h3>
+            <h3>Your happiness is our happiness</h3>
        </header>
 
        <!-- konten utama -->
@@ -86,8 +86,12 @@
                     <label for="interest">What are you interested in?</label>
                     <select id="interest" name="interest">
                         <option value="">Select option</option>
-                        <option value="product">Product Inquiry</option>
-                        <option value="service">Service Inquiry</option>
+                        <option value="bali">Bali</option>
+                        <option value="lombok">Lombok</option>
+                        <option value="yogyakarta">Yogyakarta</option>
+                        <option value="bandung">Bandung</option>
+                        <option value="singapura">Singapura</option>
+                        <option value="surabaya">Surabaya</option>
                         <option value="other">Other</option>
                     </select>
 
@@ -156,10 +160,10 @@
                     <div class="circle-icon">
                         <i class="fa-regular fa-star"></i>
                     </div>
-                    <h2>Jakarta</h2>
+                    <h2>Singapura</h2>
                 </div>
                 <div class="package-container">
-                    <p>Wisata perkotaan di Jakarta<br>dan pusat perbelanjaan</p>
+                    <p>Wisata perkotaan di Singapura<br>dan pusat perbelanjaan</p>
                 </div>
             </div>
 
