--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <a href="#privacy-policy">Privacy Policy</a>
             </div>
 
-            <!-- Made by Roger -->
+            <!-- Made by Roger Leonardo -->
             <div class="made-by">
                 <span>Made by RogerLeonardo@2024</span>
             </div>
