tambah required di input dan select

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                     <p>Sales akan menghubungi anda 1x24 jam setelah data kami terima.</p>
 
                     <label for="name">Your Name:</label>
-                    <input type="text" id="name" name="name" placeholder="First and last name">
+                    <input type="text" id="name" name="name" placeholder="First and last name" required>
 
                     <label for="email">Email Address:</label>
-                    <input type="email" id="email" name="email" placeholder="example@email.com">
+                    <input type="email" id="email" name="email" placeholder="example@email.com" required>
 
                     <label for="interest">What are you interested in?</label>
-                    <select id="interest" name="interest">
+                    <select id="interest" name="interest" required>
                         <option value="">Select option</option>
                         <option value="bali">Bali</option>
                         <option value="lombok">Lombok</option>
